<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/acceuilVF"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        <Button
            android:layout_width="match_parent"
            android:id="@+id/depotBTN"
            android:layout_margin="30dp"
            android:background="@drawable/bg_buttons"
            android:layout_height="wrap_content"
            android:text="@string/d_position"
            />
        <Button
            android:layout_width="match_parent"
            android:id="@+id/retraitBTN"
            android:layout_margin="30dp"
            android:background="@drawable/bg_buttons"
            android:layout_height="wrap_content"
            android:text="@string/retrait_d_argent"
            />
        <Button
            android:layout_width="match_parent"
            android:id="@+id/consultationBTN"
            android:layout_margin="30dp"
            android:background="@drawable/bg_buttons"
            android:layout_height="wrap_content"
            android:text="@string/consultation_solde"
            />
        <Button
            android:layout_width="match_parent"
            android:id="@+id/transactionBTN"
            android:layout_margin="30dp"
            android:background="@drawable/bg_buttons"
            android:layout_height="wrap_content"
            android:text="@string/consultation_traitement"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/soldeTV"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/retourSolde"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/retourner_l_acceuil"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/transactionTV"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            />
        <ListView
            android:layout_width="match_parent"
            android:id="@+id/liste"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/retourTransaction"
            android:layout_height="wrap_content"
            android:text="@string/retourner_l_acceuil"
            />

    </LinearLayout>

</ViewFlipper>