<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/financeVF"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:background="#555555"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/scanner_votre_identifiant_pour_acceder_au_compte"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            />
        <com.budiyev.android.codescanner.CodeScannerView
            android:layout_width="match_parent"
            android:id="@+id/camVIEW"
            android:layout_height="match_parent"
            app:autoFocusButtonColor="@color/white"
            app:autoFocusButtonVisible="true"
            app:flashButtonColor="@color/white"
            app:flashButtonVisible="true"
            app:maskColor="#555555"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/validerTV"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/saisissez_votre_mot_de_passe_pour_le_controle_de_s_curit"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/mot_de_passe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:hint="@string/confirmer_mot_de_passe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:autofillHints=""
                android:visibility="gone"
                android:ems="10"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/validerBTN"
            android:padding="10dp"
            android:layout_margin="25dp"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            />
    </LinearLayout>
</ViewFlipper>